human_written_tests/WebAssembly/processed_control_flow_validation/test_block_30.wast
(assert_invalid
  (module (func $type-value-void-vs-i32 (result i32)
    (block (result i32) (nop))
  ))
  "type mismatch"
)